--- a/vue/package.json
+++ b/vue/package.json
@@ -13,6 +13,7 @@
     "@popperjs/core": "^2.11.5",
     "axios": "^0.27.2",
     "bootstrap": "^5.1.3",
+    "chart.js": "^3.8.0",
     "core-js": "^3.8.3",
     "vue": "^2.6.14",
     "vue-alertify": "^1.1.0",
