--- a/vue/package.json
+++ b/vue/package.json
@@ -14,6 +14,7 @@
     "axios": "^0.27.2",
     "bootstrap": "^5.1.3",
     "chart.js": "^3.8.0",
+    "chartjs-plugin-datalabels": "^2.0.0",
     "core-js": "^3.8.3",
     "vue": "^2.6.14",
     "vue-alertify": "^1.1.0",
