tab width change

--- a/springboot/src/main/resources/application.properties
+++ b/springboot/src/main/resources/application.properties
@@ -1,3 +1,4 @@
+
 # DataSource
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/happyhouse?serverTimezone=Asia/Seoul
@@ -34,7 +35,7 @@ logging.logback.rollingpolicy.file-name-pattern=${LOG_FILE}.%d{yyyy-MM-dd}-%i.lo
 spring.devtools.restart.addition
 
 # app properties
-app.fileupload.uploadPath=C:\\Users\\sodud\\Desktop\\SSAFY\\vue\\vue_cli\\happyhouse-final\\springboot
+app.fileupload.uploadPath=C:\\study\\happyhouse\\springboot
 app.fileupload.uploadDir=upload
 al-exclude=log/**
 
