--- a/springboot/build.gradle
+++ b/springboot/build.gradle
@@ -4,7 +4,7 @@ plugins {
 	id 'java'
 }
 
-group = 'Spring.Boot'
+group = 'com.ssafy'
 version = '0.0.1-SNAPSHOT'
 sourceCompatibility = '1.8'
 
@@ -27,16 +27,14 @@ dependencies {
 	runtimeOnly 'mysql:mysql-connector-java'
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
-	
-implementation group: 'commons-io', name: 'commons-io', version: '2.8.0'
-implementation group: 'com.google.code.gson', name: 'gson', version: '2.8.6'
-implementation group: 'org.springframework.boot', name: 'spring-boot-starter-aop', version: '2.6.7'
-implementation group: 'org.jsoup', name: 'jsoup', version: '1.14.3'
+
+	implementation group: 'commons-io', name: 'commons-io', version: '2.8.0'
+	implementation group: 'com.google.code.gson', name: 'gson', version: '2.8.6'
+	implementation group: 'org.springframework.boot', name: 'spring-boot-starter-aop', version: '2.6.7'
+	implementation group: 'org.jsoup', name: 'jsoup', version: '1.14.3'
 
 }
 
 tasks.named('test') {
 	useJUnitPlatform()
 }
-
-	
