--- a/vue/package.json
+++ b/vue/package.json
@@ -19,6 +19,7 @@
     "vue": "^2.6.14",
     "vue-alertify": "^1.1.0",
     "vue-router": "^3.5.4",
+    "vue-sweetalert2": "^5.0.5",
     "vuex": "^3.6.2"
   },
   "devDependencies": {
