--- a/vue/package.json
+++ b/vue/package.json
@@ -17,9 +17,9 @@
     "chartjs-plugin-datalabels": "^2.0.0",
     "core-js": "^3.8.3",
     "vue": "^2.6.14",
-    "vue-alertify": "^1.1.0",
     "vue-router": "^3.5.4",
     "vue-sweetalert2": "^5.0.5",
+    "vue-toastify": "^1.8.1",
     "vuex": "^3.6.2"
   },
   "devDependencies": {
